# glsl_opencl_practice

./: CMakeLists.txt  README.md  conanfile.txt
include/GL/: gl.hh
src/: 01_hell_opencl.cc  02_hell_glsl.cc  CMakeLists.txt
